--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,10 @@ ol {
   max-width: 264px;
   margin-left: 0;
 }
+
+.container-social {
+  margin-right: 80px;
+}
 .social-title {
   font-size: 16px;
   font-weight: 500;
@@ -615,6 +619,7 @@ ol {
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
+  padding: 72px 24px 24px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -646,4 +651,24 @@ ol {
 }
 .modal-btn-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-title {
+  margin-bottom: 16px;
+  color: var(--bg-color-section);
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+}
+.modal-from-cont {
+  margin-bottom: 8px;
+}
+.modal-label-name {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
+  color: var(--icon-color);
 }
