--- a/css/style.css
+++ b/css/style.css
@@ -672,3 +672,19 @@ ol {
   letter-spacing: 0.04em;
   color: var(--icon-color);
 }
+.user-name {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  padding: 0 36px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-name:focus {
+  border-color: #4d5ae5;
+}
+.user-name-icon {
+  position: absolute;
+}
