--- a/css/style.css
+++ b/css/style.css
@@ -660,10 +660,10 @@ ol {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 }
-.modal-from-cont {
+.modal-form-cont {
   margin-bottom: 8px;
 }
-.modal-label-name {
+.modal-label {
   display: block;
   margin-bottom: 4px;
   font-size: 12px;
@@ -672,19 +672,30 @@ ol {
   letter-spacing: 0.04em;
   color: var(--icon-color);
 }
-.user-name {
+
+.input-container {
+  position: relative;
+}
+.input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  padding: 0 36px;
+  padding: 0 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.user-name:focus {
+.input:focus {
   border-color: #4d5ae5;
 }
-.user-name-icon {
+.input-icon { 
   position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input:focus + .input-icon {
+  fill: #4d5ae5;
 }
