--- a/css/style.css
+++ b/css/style.css
@@ -689,7 +689,7 @@ ol {
 .input:focus {
   border-color: #4d5ae5;
 }
-.input-icon { 
+.input-icon {
   position: absolute;
   left: 16px;
   top: 50%;
@@ -698,4 +698,28 @@ ol {
 }
 .input:focus + .input-icon {
   fill: #4d5ae5;
+}
+
+.tarea-cont {
+  margin-bottom: 16px;
+}
+
+.modal-tarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1, 17; /* 116.667% */
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-tarea:focus {border-color: #4D5AE5; 
 }
