--- a/css/style.css
+++ b/css/style.css
@@ -721,5 +721,27 @@ ol {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-tarea:focus {border-color: #4D5AE5; 
+.modal-tarea:focus {
+  border-color: #4d5ae5;
+}
+.checkbox-cont {
+  margin-bottom: 24px;
+}
+
+.user-privacy {
+  display: block;
+}
+
+.label-span {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent;
 }
