--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   --bg-color-section: #2e2f42;
   --light-color: #e7e9fc;
   --icon-color: #8e8f99;
+  --checkbox-color: #404bbf;
 }
 
 body {
@@ -744,4 +745,8 @@ ol {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
+}
+
+.checbox:checked + .modal-label.checkbox-icon {
+  background-color: var(--checkbox-color);
 }
