--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ img {
 .list,
 ul,
 ol {
-  list-style: none;
   display: flex;
   margin: 0;
   padding: 0;
@@ -103,7 +102,6 @@ ol {
 .menu-links {
   font-family: Roboto;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
@@ -133,12 +131,10 @@ ol {
   color: #404bbf;
 }
 .contacts {
-  font-style: normal;
 }
 .contact-item {
   font-family: Roboto;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
@@ -174,7 +170,6 @@ ol {
   color: #ffffff;
   font-family: Roboto;
   font-size: 56px;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.07; /* 107.143% */
   letter-spacing: 0.02em;
@@ -186,7 +181,6 @@ ol {
   color: #ffffff;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.04em;
@@ -747,7 +741,7 @@ ol {
   fill: transparent;
 }
 
-.checkbox:checked + .modal-label .label-span .checkbox-icon {
+.checkbox:checked + .modal-label .label-span {
   background-color: var(--checkbox-color);
   border: none;
   fill: var(--logo-color-footer);
@@ -755,4 +749,22 @@ ol {
 
 .privacy-policy {
   color: var(--logo-color);
+}
+
+.submit {
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+  height: 56px;
+  color: var(--WHITE, #ffffff);
+  text-align: center;
+  /* Button Text */
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
