--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ ol {
   min-width: 169px;
   height: 56px;
   padding: 16px 32px;
-  margin: 48px auto 188px;
+  margin: 48px auto;
   border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -249,6 +249,14 @@ ol {
 }
 .title-doing {
   margin-bottom: 72px;
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+  /* Header 2 */
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1, 1; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .list-doing {
   gap: 24px;
@@ -277,6 +285,14 @@ ol {
 }
 .title-team {
   margin-bottom: 72px;
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+  /* Header 2 */
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
 }
 .list-team .list-item {
   background-color: #ffffff;
